# tdy

./: .editorconfig  .gitignore  Cargo.toml  README.md  convert.sh  devenv.nix  new-shell.nix  shell-old.nix  shell.nix
.github/workflows/: build.yml
src/: cli_date.rs  constants.rs  document.rs  editor.rs  error.rs  ext.rs  file_ops.rs  lib.rs  main.rs  open_create.rs  search.rs  template.rs
