[package]
name = "tdy"
version = "0.0.4"
edition = "2024"
authors = ["Oto Brglez <otobrglez@gmail.com>"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
minijinja = "0.34.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }

# [profile.release]
# strip = "symbols"
# lto = "thin"
# codegen-units = 1

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times
