[package]
name = "tdy"
version = "0.0.6"
edition = "2024"
authors = ["Oto Brglez <otobrglez@gmail.com>"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
env_logger = "0.11.9"
log = "0.4.29"
minijinja = "0.34.0"
tempfile = "3.14"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
